# CleanArch

./: .gitignore  .pre-commit-config.yaml  .pylintrc  config.py  crud.py  docker-compose.yml  main.py  model.py  pyproject.toml  requirements.txt  run.py  schemas.py
source/data/interfaces/: users_repository.py
source/data/test/: uer_registry_spy.py  user_finder_spy.py
source/data/use_cases/: use_finder.py  user_finder_test.py  user_register.py  user_register_test.py
source/domain/models/: users.py
source/domain/use_cases/: user_finder.py  user_registry.py
source/infra/db/entities/: users.py
source/infra/db/repositories/: user_finder_test.py  users_repository.py  users_repository_test.py
source/infra/db/settings/: connection.py  connection_test.py
source/main/adapters/: request_adapter.py
source/main/composer/: user_finder_composer.py  user_registry_composer.py
source/main/routers/: routers.py
source/main/server/: server.py
source/presentation/controllers/: use_finder_controller_test.py  user_finder_controller.py  user_registry_controller.py  user_registry_controller_test.py
source/presentation/http_types/: http_requests.py  http_response.py
source/presentation/interfaces/: controller_interface.py
source/tests/: user_repository_mock.py
