[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = ["edummap4412 <mascarenhaseduardo4412@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
pydantic = "1.10.8"
sqlalchemy = "^2.0.19"
psycopg2 = "^2.9.6"
pylint = "^2.17.4"
pre-commit = "^3.3.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
